about.css
:root {
    --margin_menu_col1_flex:22vw;
  }
  
  .flexbox-container-top {
    display: flex;
 
    flex-direction: row;
    flex-wrap: wrap;
}


.flexbox-container {
    display: flex;
 
    flex-direction: column;
    flex-wrap: wrap;
    margin-left: var(--margin_menu_col1_flex);
    display: inline-block;
}


    .break {
        flex-basis: 100%;
        height: 0;
      }
 


.ul{
    margin-top: 0vh;
    padding-top: 0vh;

}

.flexbox-item {
    
    width: 0 auto;
    padding: 0 0 ;
    margin: 0 0;
   
    
  
    }

.flexbox-item-text {

    min-height: 40vh;
    padding: 0 0 ;
    margin: 0 0;
    word-wrap: break-word ;
    display: inline-block;
   
    flex-grow: 1;
    max-width: 33vw;
    font-size: 1.8rem;
    margin-left: 3vw;
    
    
    
    }

.flexbox-bio-photo {
  
    height: auto;
    min-width: 30vw;
    max-width: 32vw;
    align-items: flex-start;
    align-content: flex-start;
    margin-top: 1vh;
    
 

}

.p {

    line-break: auto;
}

.flexbox-gig-list{
    
    width: auto;
    align-items: flex-start;
    align-content: flex-start;
    margin: 0;
    padding: 0;
    justify-content: left;   
   
   
 
    

}

.flexbox-item ev-list li {
    font-size: 3rem ;
}
 
.flexbox-item-ev {
    
    width: 0 auto;
    padding: 0 0 ;
    margin: 0 0;
   font-size: 1.3rem;
    
  
    }

